# airbyte

./: .gitignore  run-ab-platform.sh  settings.gradle
airbyte-integrations/connectors/source-aws-quicksight/: README.md  acceptance-test-config.yml  logs copy.txt  logs.txt  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-aws-quicksight/integration_tests/: configured_catalog.json  sample_config.json
airbyte-integrations/connectors/source-aws-quicksight/sample_files/: configured_catalog.json
airbyte-integrations/connectors/source-aws-quicksight/source_aws_quicksight/: __init__.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-aws-quicksight/source_aws_quicksight/schemas/: describe_analysis.json  describe_analysis_definition.json  describe_dashboard.json  describe_data_set.json  describe_data_source.json  list_analyses.json  list_dashboard_versions.json  (+12 more)
airbyte-integrations/connectors/source-aws-quicksight/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-endpoint-central/: README.md  acceptance-test-config.yml  discover.json  logs copy.txt  logs.txt  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-endpoint-central/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-endpoint-central/sample_files/: configured_catalog.json
airbyte-integrations/connectors/source-endpoint-central/source_endpoint_central/: Savedspec.yaml  __init__.py  auth.py  bases.py  run.py  source.py  spec.json  stream_families.py  stream_summaries.py  stream_supported_patches.py  stream_vulnerability.py  streams.py  test copy.json  test.json
airbyte-integrations/connectors/source-endpoint-central/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
(+872 files in other folders)
